# Chaos-Zero-Nightmare-ASSet-Ripper

./: CMakeLists.txt  SCSPParser.cpp  SCSPParser.h  SCTParser.cpp  SCTParser.h  SpineDictionary.cpp  SpineDictionary.h  SpineRenderer.cpp  SpineRenderer.h  main.cpp
.github/workflows/: build.yml
tests/: test_spine_loading.py
